--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.0.2"
 
     defaultConfig {
-        applicationId "com.kerboocorp.pouetsoundbox"
+        applicationId "com.kerboocorp.ultimatesoundbox"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
